# vis-comparison

./: .gitmodules  README.md  clean.sh  prepare_kg4vis.sh  pyproject.toml  run.sh
src/: __init__.py  main.py
src/data/: comparison-all-DPA.csv  iplookup-cpu.csv  scalability-energy-crc-TIME.csv
src/tools/: autoviz.py  deepeye.py  lux.py
