[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vis-comparison"
version = "0.1.0"
description = "Visualization Systems Comparison"
readme = "README.md"
requires-python = ">3.10"
dependencies = [
  "regex",
  "pandas<3",
  "numpy",
  "matplotlib",
  "seaborn",
  "ipython==7.23.1",
  "pyecharts==1.3.1",
  "setuptools>=68,<81"
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}
